[package]
name = "candle"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.49.0", features = ["csv", "lazy", "strings"] }
anyhow = "1.0.75"
hf-hub = "0.4.2"
tokenizers = "0.21.1"
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-optimisers = "0.9.0"
candle-transformers = { version = "0.9.1" }
serde_json = "1.0.140"
